--- a/before-login.html
+++ b/before-login.html
@@ -5,11 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="./images/pavicon/favicon-16x16.png">
     <link rel="stylesheet" href="./css/fullpage.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
+    <link rel="stylesheet" href="./css/header.css">
+    <link rel="stylesheet" href="./css/footer.css">
     <link rel="stylesheet" href="./css/before-login.css">
 
     <title>before_login</title>
@@ -359,7 +362,6 @@
         <div class="section s3">
             <div class="community">
                 <div class="commu-title"><strong>고민이 있어요!</strong></div>
-                <div class="commu-text">우리 집사님 들에게 어떤 고민이 있을까요?</div>
                 <div id="carouselExampleIndicators" class="carousel slide">
                     <div class="carousel-indicators">
                         <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -368,6 +370,7 @@
                     </div>
                     <div class="carousel-inner">
                         <div class="carousel-item active">
+                            <div class="commu-text">우리 주인님 들에게 어떤 고민이 있을까요?</div>
                             <div class="commu-item" class="d-block w-100">
                                 <div class="item">
                                     <img src="./images/instgram_1.png" class="instaItem" alt="...">
@@ -408,6 +411,7 @@
                             </div>
                         </div>
                         <div class="carousel-item">
+                            <div class="commu-text">우리 집사님 들에게 어떤 고민이 있을까요?</div>
                             <div class="commu-item" class="d-block w-100">
                                 <div class="item">
                                     <img src="./images/instgram_4.png" class="instaItem" alt="...">
