--- a/before-login.html
+++ b/before-login.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="./css/footer.css">
     <link rel="stylesheet" href="./css/before-login.css">
 
-    <title>before_login</title>
+    <title>inuneco</title>
 </head>
 
 <body>
