--- a/before-login.html
+++ b/before-login.html
@@ -19,34 +19,39 @@
 </head>
 
 <body>
-    <section id="full-page">
+    <div id="full-page">
+        <header id="header"></header>
         <div class="section s0">
-            <!-- banner1 -->
-            <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
-                <div class="carousel-inner">
-                    <div class="carousel-item active" data-bs-interval="3300">
-                        <img src="./images/banner1.png" class="d-block w-100" alt="...">
-                    </div>
-                    <div class="carousel-item" data-bs-interval="3300">
-                        <img src="./images/banner1 copy.png" class="d-block w-100" alt="...">
-                    </div>
+        <!-- banner1 -->
+        <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner banner1-margin">
+                <div class="carousel-item active" data-bs-interval="4000">
+                    <img src="./images/banner1-1.png" class="d-block w-100 banner1-1" alt="...">
+                    <img src="./images/banner1-3.png" class="d-block w-100 banner1-2" alt="...">
+                    <img src="./images/banner1-5.png" class="d-block w-100 banner1-3" alt="...">
                 </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                  <span class="visually-hidden">Next</span>
-                </button>
-              </div>
+                <div class="carousel-item" data-bs-interval="4000">
+                    <img src="./images/banner1-2.png" class="d-block w-100 banner1-1" alt="...">
+                    <img src="./images/banner1-4.png" class="d-block w-100 banner1-2" alt="...">
+                    <img src="./images/banner1-6.png" class="d-block w-100 banner1-3" alt="...">
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+            </div>
         </div>
         <div class="section s1">
-    
             <div class="best">
                 <div class="best-flex">
                     <div class="best-text">
-                        <strong>best<br>product<br><br>for</strong>
+                        <strong>Best</strong>
+                        <strong>product</strong>
                     </div>
                     <div class="best-product">
                         <ul>
@@ -59,11 +64,12 @@
                             <div class="list-dog">
                                 <div class="list-item">
                                     <div class="img01"></div>
-                                    <div class="item-name">로얄캐닌 독 미니 인도어 어덜트 3kg<br>소화기 건강</div>
+                                    <div class="item-name">로얄캐닌 독 미니 인도어<br>어덜트 3kg 소화기 건강</div>
                                     <div class="price">
                                         <div class="red-font">6%</div>
                                         <div class="line-font">46,500원</div>
-                                        <div class="price-font">43,900원</div>                                </div>
+                                        <div class="price-font">43,900원</div>                                
+                                    </div>
                                 </div>
                                 <div class="list-item">
                                     <div class="img02"></div>
@@ -122,8 +128,9 @@
                                     <div class="price">
                                         <div class="red-font">41%</div>
                                         <div class="line-font">10,000원</div>
-                                        <div class="price-font">4,900원</div>                                </div>
+                                        <div class="price-font">4,900원</div>                                
                                     </div>
+                                </div>
                                 <div class="list-item">
                                     <div class="img08"></div>
                                     <div class="item-name">저알러지 국내산 껌,<br>그래니즈 독 터키츄 롱스틱 30g</div>
@@ -135,7 +142,7 @@
                                 </div>
                                 <div class="list-item">
                                     <div class="img09"></div>
-                                    <div class="item-name">네추럴코어 독 하루유산균<br>혼합 12p</div>
+                                    <div class="item-name">네추럴코어 독<br>하루유산균 혼합 12p</div>
                                     <div class="price">
                                         <div class="red-font">16%</div>
                                         <div class="line-font">5,500원</div>
@@ -155,7 +162,7 @@
                                 </div>
                                 <div class="list-item">
                                     <div class="img11"></div>
-                                    <div class="item-name">츄통령 바삭츄 동결건조 닭가슴살<br>대용량 100g</div>
+                                    <div class="item-name">츄통령 바삭츄 동결건조<br>닭가슴살 대용량 100g</div>
                                     <div class="price">
                                         <div class="red-font">20%</div>
                                         <div class="line-font">14,900원</div>
@@ -177,15 +184,16 @@
                             <div class="list-dog">
                                 <div class="list-item">
                                     <div class="img13"></div>
-                                    <div class="item-name">펫홀릭 돌돌이 노즈워크 장난감</div>
+                                    <div class="item-name">펫홀릭 돌돌이<br>노즈워크 장난감</div>
                                     <div class="price">
                                         <div class="red-font">47%</div>
                                         <div class="line-font">30,000원</div>
-                                        <div class="price-font">15,900원</div>                                </div>
+                                        <div class="price-font">15,900원</div>
+                                    </div>
                                     </div>
                                 <div class="list-item">
                                     <div class="img14"></div>
-                                    <div class="item-name">냥품멍품 멍티슈 노즈워크 장난감</div>
+                                    <div class="item-name">냥품멍품 멍티슈<br>노즈워크 장난감</div>
                                     <div class="price">
                                         <div class="red-font">18%</div>
                                         <div class="line-font">16,900원</div>
@@ -236,11 +244,12 @@
                             <div class="list-dog">
                                 <div class="list-item">
                                     <div class="img19"></div>
-                                    <div class="item-name">반려양품 배변패드 기본형 100매</div>
+                                    <div class="item-name">반려양품 배변패드<br>기본형 100매</div>
                                     <div class="price">
                                         <div class="red-font">42%</div>
                                         <div class="line-font">13,000원</div>
-                                        <div class="price-font">7,500원</div>                                </div>
+                                        <div class="price-font">7,500원</div>
+                                    </div>
                                     </div>
                                 <div class="list-item">
                                     <div class="img20"></div>
@@ -264,7 +273,7 @@
                             <div class="list-cat">
                                 <div class="list-item">
                                     <div class="img22"></div>
-                                    <div class="item-name">호랑이모래 무향 6kg</div>
+                                    <div class="item-name">호랑이모래<br>무향 6kg</div>
                                     <div class="price">
                                         <div class="red-font">26%</div>
                                         <div class="line-font">16,000원</div>
@@ -273,7 +282,7 @@
                                 </div>
                                 <div class="list-item">
                                     <div class="img23"></div>
-                                    <div class="item-name">반려양품 모래매트 베이지 L</div>
+                                    <div class="item-name">반려양품 모래매트<br>베이지 L</div>
                                     <div class="price">
                                         <div class="red-font">20%</div>
                                         <div class="line-font">16,000원</div>
@@ -282,7 +291,7 @@
                                 </div>
                                 <div class="list-item">
                                     <div class="img24"></div>
-                                    <div class="item-name">오롯이 천연탈취제 650ml</div>
+                                    <div class="item-name">오롯이 천연탈취제<br>650ml</div>
                                     <div class="price">
                                         <div class="red-font">15%</div>
                                         <div class="line-font">14,100원</div>
@@ -291,26 +300,26 @@
                                 </div>
                             </div>
                         </div>
-
-                    </div>
-
                     </div>
                 </div>
             </div>
         </div>
+        
         <div class="section s2">
             <div class="login-title">
                 <div class="title"><strong>로그인 하고 우리아이 등록까지 하면?</strong></div>
-                <div class="toggle">
-                    <img src="./images/dog (1).png" class="toggle-img1 toggle-click">
-                    <img src="./images/cat (1).png" class="toggle-img2">
+                <div class="toggle-btn">
+                    <div class="toggle">
+                        <img src="./images/dog (1).png" class="toggle-img1 toggle-click">
+                        <img src="./images/cat (1).png" class="toggle-img2">
+                    </div>
+                    <div class="click">
+                        <img src="./images/Arrow 1.png">
+                        <div>click here</div>
+                    </div>
                 </div>
             </div>
             <div class="login-pet01">
-                <div class="click">
-                    <img src="./images/Arrow 1.png">
-                    <div>click here</div>
-                </div>
                 <div class="login-text">
                     <div class="text01">
                         <div class="textTitle">연령대별 추천사료</div>
@@ -333,10 +342,6 @@
                 </div>
             </div>
             <div class="login-pet02 none-click">
-                <div class="click">
-                    <img src="./images/Arrow 1.png">
-                    <div>click here</div>
-                </div>
                 <div class="login-text">
                     <div class="text01">
                         <div class="textTitle">연령대별 추천사료</div>
@@ -372,7 +377,7 @@
                         <div class="carousel-item active">
                             <div class="commu-text">우리 주인님 들에게 어떤 고민이 있을까요?</div>
                             <div class="commu-item" class="d-block w-100">
-                                <div class="item">
+                                <div class="item1">
                                     <img src="./images/instgram_1.png" class="instaItem" alt="...">
                                     <div class="icon">
                                         <div class="like_button">
@@ -384,7 +389,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="item">
+                                <div class="item2">
                                     <img src="./images/instgram_2.png" class="instaItem" alt="...">
                                     <div class="icon">
                                         <div class="like_button">
@@ -396,7 +401,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="item">                                
+                                <div class="item3">                                
                                     <img src="./images/instgram_3.png" class="instaItem" alt="...">
                                     <div class="icon">
                                         <div class="like_button">
@@ -413,7 +418,7 @@
                         <div class="carousel-item">
                             <div class="commu-text">우리 집사님 들에게 어떤 고민이 있을까요?</div>
                             <div class="commu-item" class="d-block w-100">
-                                <div class="item">
+                                <div class="item1">
                                     <img src="./images/instgram_4.png" class="instaItem" alt="...">
                                     <div class="icon">
                                         <div class="like_button">
@@ -425,7 +430,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="item">
+                                <div class="item2">
                                     <img src="./images/instgram_5.png" class="instaItem" alt="...">
                                     <div class="icon">
                                         <div class="like_button">
@@ -437,7 +442,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="item">
+                                <div class="item3">
                                     <img src="./images/instgram_6.png" class="instaItem" alt="...">
                                     <div class="icon">
                                         <div class="like_button">
@@ -450,7 +455,6 @@
                                     </div>
                                 </div>
                             </div>  
-                        </div>
                         </div>
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -475,18 +479,26 @@
                 </div>
                 <div class="swiper mySwiper">
                     <div class="swiper-wrapper">
-                        <div class="swiper-slide"><img src="./images/banner_2_1.png"></div>
-                        <div class="swiper-slide"><img src="./images/banner_2_2.png"></div>
-                        <div class="swiper-slide"><img src="./images/banner_2_3.png"></div>
+                        <div class="swiper-slide">
+                            <img src="./images/banner2-1.png" class="img-event-1">
+                        </div>
+                        <div class="swiper-slide">
+                            <img src="./images/banner2-2.png" class="img-event-1">
+                        </div>
+                        <div class="swiper-slide">
+                            <img src="./images/banner2-3.png" class="img-event-1">
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-    </section>
+        <footer id="footer" class="section fp-auto-heigth"></footer>
+    </div>
     <script src="./js/fullpage.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="./js/header-footer.js"></script>
     <script src="./js/before-login.js"></script>
 </body>
 
