--- a/html/footer.html
+++ b/html/footer.html
@@ -1,20 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../footer.css">
-    <title>Document</title>
-</head>
-
-<body>
-    <div id="footer">
+    <div id="footer-item">
         <div class="top-footer">
             <div class="top-left-footer space-between">
                 <div class="footer-logo">
-                    <img src="../images/logo_purple.png" alt="">
+                    <img src="images/footer-logo.png" alt="">
                 </div>
                 <div class="business">
                     CEO. inuenco | TEL. 7979-7979 | E-MAIL. inuneco@gmail.com<br>
@@ -61,12 +49,9 @@
                 <li>이용안내</li>
             </ul>
             <div class="bottom-footer-icon">
-                <img src="../images/카톡.png" alt="kakaotalk">
-                <img src="../images/인스타.png" alt="instagram">
-                <img src="../images/페북.png" alt="facebook">
-                <img src="../images/유튜브.png" alt="youtube">
+                <img src="images/카톡.png" alt="kakaotalk">
+                <img src="images/인스타.png" alt="instagram">
+                <img src="images/페북.png" alt="facebook">
+                <img src="images/유튜브.png" alt="youtube">
             </div>
         </div>
-</body>
-
-</html>
