--- a/html/header.html
+++ b/html/header.html
@@ -1,26 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../header.css">
-    <title>Document</title>
-</head>
-
-<body>
-    
     <!-- header -->
-    <div id="header" class="display-flex">
+    <div id="header-item">
         <div class="top-banner">
-            <p>이누네코 주인님은 전상품 무료배송!</p>
+            <div class="media-none">이누네코 회원님은 전상품 무료배송!</div>
         </div>
-        <div class="header display-flex">
-            <a href="main-page.html">
-                <img src="../images/logo_light_purple.png" alt="inuneco logo">
+        <div class="header">
+            <a href="before-login.html">
+                <img src="images/logo_light_purple.png" alt="inuneco logo">
             </a>
-            <div class="main-title">
+            <div class="main-menu-title">
                 <ul class="main-menu">
                     <li><a href=""><b class="after">SHOP</b></a>
                         <ul class="sub-menu">
@@ -47,11 +35,9 @@
                     </li>
                 </ul>
             </div>
-            <div class="my-menu display-flex">
-                <img class="user-icon" src="../images/user.png" alt="">
-                <img class="menu-icon" src="../images/menu.png" alt="">
+            <div class="my-menu">
+                <img class="user-icon" src="images/user.png" alt="">
+                <img class="menu-icon" src="images/menu.png" alt="">
             </div>
         </div>
     </div>
-</body>
-</html>
