--- a/html/footer.html
+++ b/html/footer.html
@@ -49,9 +49,9 @@
                 <li>이용안내</li>
             </ul>
             <div class="bottom-footer-icon">
-                <img src="images/카톡.png" alt="kakaotalk">
-                <img src="images/인스타.png" alt="instagram">
-                <img src="images/페북.png" alt="facebook">
-                <img src="images/유튜브.png" alt="youtube">
+                <img src="images/kakao-logo.png" alt="kakaotalk">
+                <img src="images/insta-logo.png" alt="instagram">
+                <img src="images/facebook-logo.png" alt="facebook">
+                <img src="images/youtube.png" alt="youtube">
             </div>
         </div>
