--- a/html/footer.html
+++ b/html/footer.html
@@ -52,6 +52,6 @@
                 <img src="images/kakao-logo.png" alt="kakaotalk">
                 <img src="images/insta-logo.png" alt="instagram">
                 <img src="images/facebook-logo.png" alt="facebook">
-                <img src="images/youtube.png" alt="youtube">
+                <img src="images/youtube-logo.png" alt="youtube">
             </div>
         </div>
